EXTRA_DIST =				\
	$(Data_DATA)

Datadir = $(datadir)/icons/hicolor/scalable/status

Data_DATA =				                    \
    battery-caution-charging-symbolic.svg   \
    battery-caution-symbolic.svg            \
    battery-empty-charging-symbolic.svg     \
    battery-empty-symbolic.svg              \
    battery-full-charged-symbolic.svg       \
    battery-full-charging-symbolic.svg      \
    battery-full-symbolic.svg               \
    battery-good-charging-symbolic.svg      \
    battery-good-symbolic.svg               \
    battery-low-charging-symbolic.svg       \
    battery-low-symbolic.svg                \
    battery-missing-symbolic.svg            \
    computer.svg			                \
    display-brightness-symbolic.svg         \
    keyboard.svg			                \
    mouse.svg			                    \
    multimedia-player.svg		            \
    pda.svg				                    \
    phone.svg			                    \
    tablet.svg			                    \
    video-display.svg		                \
    xfpm-ac-adapter.svg		                \
    xfpm-ac-adapter-symbolic.svg		    \
    xfpm-primary-000.svg		            \
    xfpm-primary-020.svg		            \
    xfpm-primary-040.svg		            \
    xfpm-primary-060.svg		            \
    xfpm-primary-080.svg		            \
    xfpm-primary-100.svg		            \
    xfpm-primary-000-charging.svg	        \
    xfpm-primary-020-charging.svg	        \
    xfpm-primary-040-charging.svg	        \
    xfpm-primary-060-charging.svg	        \
    xfpm-primary-080-charging.svg	        \
    xfpm-primary-100-charging.svg	        \
    xfpm-primary-charged.svg		        \
    xfpm-primary-missing.svg		        \
    xfpm-ups-000.svg		                \
    xfpm-ups-020.svg		                \
    xfpm-ups-040.svg		                \
    xfpm-ups-060.svg		                \
    xfpm-ups-080.svg		                \
    xfpm-ups-100.svg		                \
    xfpm-brightness-keyboard.svg            \
    xfpm-brightness-lcd.svg
