EXTRA_DIST =            \
    $(Data_DATA)

Datadir = $(datadir)/icons/hicolor/scalable/status

Data_DATA =                                 \
    ac-adapter.svg                          \
    ac-adapter-symbolic.svg                 \
    battery-caution-charging.svg            \
    battery-caution.svg                     \
    battery-empty-charging.svg              \
    battery-empty.svg                       \
    battery-full-charged.svg                \
    battery-full-charging.svg               \
    battery-full.svg                        \
    battery-good-charging.svg               \
    battery-good.svg                        \
    battery-low-charging.svg                \
    battery-low.svg                         \
    battery-missing.svg                     \
    battery-caution-charging-symbolic.svg   \
    battery-caution-symbolic.svg            \
    battery-empty-charging-symbolic.svg     \
    battery-empty-symbolic.svg              \
    battery-full-charged-symbolic.svg       \
    battery-full-charging-symbolic.svg      \
    battery-full-symbolic.svg               \
    battery-good-charging-symbolic.svg      \
    battery-good-symbolic.svg               \
    battery-low-charging-symbolic.svg       \
    battery-low-symbolic.svg                \
    battery-missing-symbolic.svg            \
    computer.svg                            \
    display-brightness.svg                  \
    display-brightness-symbolic.svg         \
    keyboard.svg                            \
    keyboard-brightness.svg                 \
    keyboard-brightness-symbolic.svg        \
    mouse.svg                               \
    multimedia-player.svg                   \
    pda.svg                                 \
    phone.svg                               \
    tablet.svg                              \
    uninterruptible-power-supply.svg        \
    video-display.svg                       \
    xfce4-power-manager-settings.svg