imagesdir = $(datadir)/xfce4/doc/C/images

images_DATA = cpu-settings.png	\
	      general-settings.png	\
	      battery-settings.png	\
	      monitor-settings.png	\
	      button-settings.png	\
	      battery.png		\
	      battery-discharging.png	\
	      settings.png

EXTRA_DIST = $(images_DATA)


